--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
 коммитим на git только исходный код, а не настройки IDE
+
+И, Анна, вы совсем не разобрались в тебе наследование
+Ваши ошибки хоть и классические, но грубые, тем более, что на занятии они проговаривались.
